fixing X on mobile

--- a/src/WorkExperience.module.scss
+++ b/src/WorkExperience.module.scss
@@ -66,7 +66,7 @@
                         margin-top: 1px;
                         margin-left: 1px;
                         top: 0.45rem;
-                        right: 1em;
+                        right: 0.85rem;
                         rotate: 45deg;
                         position: absolute;
                     }
